z-index fixed

--- a/src/components/highlights/highlights.css
+++ b/src/components/highlights/highlights.css
@@ -3,10 +3,10 @@
   justify-content: space-evenly;
   background: rgba(20, 20, 21, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(3.5px);
-  -webkit-backdrop-filter: blur(3.5px);
+  /* backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px); */
 
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(5px); */
   border-radius: 10px;
   margin-left: 30px;
   margin-right: 30px;
@@ -14,7 +14,7 @@
   padding-left: 10px;
   min-height: 700px;
   position: relative;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .fixtures {
