--- a/src/components/profile/profiledisplay/profiledisplay.css
+++ b/src/components/profile/profiledisplay/profiledisplay.css
@@ -10,9 +10,8 @@
   min-height: 300px;
 
   /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
-  backdrop-filter: blur(3.5px);
-  -webkit-backdrop-filter: blur(3.5px);
-  z-index: -1;
+
+  /* z-index: -1; */
 }
 .profile-div1 {
   display: flex;
