--- a/src/components/profileUpdate/profileUpdate.css
+++ b/src/components/profileUpdate/profileUpdate.css
@@ -2,12 +2,11 @@
   padding: 50px;
   /* background: linear-gradient(to right, #fff 40%, transparent 0%); */
   background-color: rgba(212, 212, 212, 0.164);
-  backdrop-filter: blur(5px);
+
   height: 100%;
   /* min-height: 100vh; */
   display: flex;
   justify-content: center;
-  z-index: -1;
 }
 .all-update {
   /* padding: 50px; */
